feat(api): add /debug/ endpoints
