# openapi.yml
@@ -23,6 +23,22 @@ tags:
   - name: integration
     description: Integration API
 paths:
+  /debug/gc:
+    post:
+      summary: Garbage collector
+      description: Run the garbage collector
+      responses:
+        '204':
+          description: Successful "OK" reply
+
+  /debug/pprof/dump:
+    post:
+      summary: Dump pprof
+      description: Dump pprof
+      responses:
+        '204':
+          description: Successful "OK" reply
+
   "/ping":
     get:
       summary: PING test
